--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -32,6 +32,11 @@
 }
 
 .search-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
     .form-control-input{
         box-shadow: 0 4px 10px rgb(0 0 0 / 12%), 0 0 1px rgb(0 0 0 / 5%) inset;
         min-width: 300px;
